--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fade and Slide in on Scroll</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
@@ -38,6 +38,6 @@
       </div>
     </section>
   </div>
-  <script src="script.js"></script>
+  <script src="jvs/script.js"></script>
 </body>
 </html>
